# garfield

./: .eslintrc.json  .gitignore  Cargo.toml  LICENSE  README.md  README_VN.md  REPORT.md  SKILL.md  commit_plan.sh  package.json  tasks.md
.cargo/: config.toml
agents/claude/: SKILL.md
agents/cursor/: SKILL.md
agents/pi/: SKILL.md  index.ts
docs/: COMMANDS_COMPARISON.md  COMPARISON.md  COMPARISON_VN.md  FLOW_DETAILS.md
example_ruby/: user_service.rb
garfield-out/: GRAPH_REPORT.md
src/: analyze.rs  build.rs  cache.rs  cluster.rs  community.rs  detect.rs  export.rs  extract.rs  hyperedge.rs  lang.rs  leiden.rs  lib.rs  main.rs  report.rs  serve.rs  summary.rs  types.rs  validate.rs
src/analyze/: mod.rs  tests.rs
src/cache/: mod.rs  tests.rs
src/community/: mod.rs  tests.rs
src/detect/: mod.rs  tests.rs
src/export/: mod.rs  tests.rs
src/extract/: mod.rs  tests.rs
src/leiden/: mod.rs  tests.rs
src/report/: mod.rs  tests.rs
src/serve/: mod.rs  tests.rs
src/types/: mod.rs  tests.rs
src/validate/: mod.rs  tests.rs
tests/: cache_integration.rs  cluster_integration_test.rs  community_integration.rs  detect_integration.rs  detect_integration_test.rs  e2e_full_build.rs  e2e_full_build_test.rs  e2e_full_pipeline.rs  e2e_tests.rs  integration_analyze.rs  integration_build.rs  integration_cache.rs  integration_cache_test.rs  integration_community.rs  integration_community_test.rs  integration_detect.rs  integration_hyperedge_flow.rs  integration_hyperedge_query.rs  integration_hyperedge_test.rs  integration_java.rs  integration_lang_go.rs  integration_lang_java.rs  integration_lang_javascript.rs  integration_lang_lua.rs  integration_lang_php.rs  integration_lang_python.rs  integration_lang_ruby.rs  integration_lang_rust.rs  integration_lang_scala.rs  integration_lang_test.rs  integration_lang_typescript.rs  integration_leiden.rs  integration_python.rs  integration_query.rs  integration_rust.rs  integration_scala.rs  integration_serve_test.rs  integration_test.rs  integration_tests.rs  integration_types.rs  (+10 more)
tests/docs/: README.md
tests/docs/examples/: go.md  ruby.md  rust.md
tests/docs/flow/: build.md  explain.md  query.md
tests/docs/modules/: build.md  cache.md  detect.md  extract.md  hyperedge.md  serve.md
