[package]
name = "garfield"
version = "0.1.0"
edition = "2021"
description = "Build knowledge graph from source code"
license = "MIT"

[lib]
name = "garfield"
path = "src/lib.rs"

[[bin]]
name = "garfield"
path = "src/main.rs"

[dependencies]
# Tree-sitter
tree-sitter-language-pack = "1.4"
tree-sitter = "0.26"
tree-sitter-python = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-scala = "0.24"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-java = "0.23"
tree-sitter-go = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-bash = "0.23"

# HTTP client for semantic extraction
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
walkdir = "2.5"
rayon = "1.11"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
dirs = "5.0"
regex = "1"
config = "0.14"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
lto = true
codegen-units = 1
strip = true
