[package]
name = "garfield"
version = "0.1.0"
edition = "2024"
description = "Build knowledge graph from source code"
license = "MIT"

[lib]
name = "garfield"
path = "src/lib.rs"

[[bin]]
name = "garfield"
path = "src/main.rs"

[dependencies]
# Tree-sitter - using language pack (170+ languages in one crate)
tree-sitter = "0.26.8"
tree-sitter-language-pack = "1.4"

# HTTP client for semantic extraction
reqwest = { version = "0.13", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fastrand = "2.4.1"
sha2 = "0.10"
walkdir = "2.5.0"
rayon = "1.11.0"
clap = { version = "4.6", features = ["derive"] }
anyhow = "1.0"
dirs = "5.0"
regex = "1"
config = "0.14"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
lto = true
codegen-units = 1
strip = true
